--- a/sport.css
+++ b/sport.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f1f1f1;
-    background-image: url(image/sport.jpeg);
+    background-image: url(image/ballon.jpeg);
     
     display: flex;
     flex-direction: column;
