--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -1,4 +1,4 @@
-/* Style général */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -18,7 +18,7 @@ h1 {
     margin: 0;
 }
 
-/* Navigation */
+
 nav {
     background-color: #5a6b7a;
     padding: 10px 0;
@@ -46,13 +46,13 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
-.btn-connexion {
+.btn-deconnexion {
     background-color: #a8a679;
     padding: 10px 20px;
     border-radius: 5px;
 }
 
-/* Main container */
+
 .main-container {
     display: flex;
     justify-content: space-around;
@@ -61,7 +61,7 @@ nav ul li a:hover {
     padding: 0 20px;
 }
 
-/* Section */
+
 .section {
     text-align: center;
     background-color: white;
@@ -74,34 +74,34 @@ nav ul li a:hover {
     overflow: hidden;
 }
 
-/* Section Image */
+
 .section-image {
    
-        width: 100% !important; /* S'assure que l'image prend toute la largeur */
-        height: auto !important; /* Maintient l'aspect ratio de l'image */
-        object-fit: cover !important; /* Fait en sorte que l'image couvre tout l'espace disponible */
+        width: 100% !important; 
+        height: auto !important; 
+        object-fit: cover !important; 
         border-radius: 10px;
     transition: transform 0.3s ease-in-out;
 }
 
 .section:hover .section-image {
-    transform: scale(1.1); /* Un léger zoom au survol */
+    transform: scale(1.1); 
 }
 
-/* Section Title */
+
 .section h2 {
     color: #5a4b3d;
     font-size: 1.5rem;
 }
 
-/* Section Description */
+
 .section p {
     color: #5a4b3d;
     font-size: 1rem;
     margin: 10px 0;
 }
 
-/* Bouton Commencer */
+
 .btn {
     background-color: #a8a679;
     color: white;
